feat(home): add adaptive universal input
